[package]
name = "dynamic_process_fun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
name = "process_funny"

[profile.release]
strip = "symbols"
panic = "abort"
trim-path = true
opt-level = "z"
lto = true

[dependencies]

[dependencies.windows]
version = "0.53.0"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    ]